--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,57 @@
 			/>
 			<div class="examples">
 				<div class="row">
+					<div class="container col-md-3" id="project_0">
+						<h4 class="text-center">Talk to Cherrie</h4>
+						<div class="media" style="background-color: rgb(247, 247, 198)">
+							<img
+								class="square rounded float-left img-thumbnail"
+								width="64px"
+								src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+								alt="Generic placeholder image"
+							/>
+							<div class="media-body">
+								<h5 style="margin: 10px col-md-6">Cherrie</h5>
+							</div>
+						</div>
+						<!-- Messages -->
+						<div
+							id="chatContainer"
+							style="height: 400px"
+							class="container-fluid border overflow-auto"
+						></div>
+						<div class="input-group">
+							<input class="form-control" id="textbox" type="text" />
+							<div class="input-group-append">
+								<button id="sendBtn" type="button" class="btn btn-dark">
+									<i class="fa-solid fa-paper-plane"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<h2>Chatbot</h2>
+						<i class="fa-brands fa-square-js"></i>
+						<i class="fa-brands fa-bootstrap"></i>
+						<p style="width: 70%">
+							The Cherrie Chatbot is a conversational interface that uses
+							natural language processing and machine learning algorithms to
+							understand and respond to user messages in a human-like way. The
+							bot can answer a variety of questions, tell jokes, and provide
+							weather and stock information upon request. The chatbot also has a
+							personality, which is reflected in its responses and interactions
+							with users. The goal of the project is to create a user-friendly
+							and engaging chatbot that can help users with their queries and
+							provide a pleasant conversational experience.
+						</p>
+						<a
+							href="https://github.com/sahilyho/chatbot"
+							class="btn btn-primary bg-dark"
+							><i class="fa-brands fa-javascript"></i> Source Code</a
+						>
+					</div>
+				</div>
+				<div class="row">
 					<div class="col-md-8" id="project_1">
 						<img
 							src="/static/images/braille_example.png"
@@ -78,8 +129,10 @@
 							text into Braille, making it accessible to visually impaired
 							individuals.
 						</p>
-						<a href="#" class="btn btn-primary bg-dark"
-							><i class="fa-brands fa-github"></i> Github Files</a
+						<a
+							href="https://github.com/sahilyho/braille_translator"
+							class="btn btn-primary bg-dark"
+							><i class="fa-brands fa-github"></i> Source Code</a
 						>
 					</div>
 				</div>
@@ -99,8 +152,10 @@
 							catches a red egg before it's placed in the basket, it's game
 							over.
 						</p>
-						<a href="#" class="btn btn-primary bg-dark"
-							><i class="fa-brands fa-github"></i> Github Files</a
+						<a
+							href="https://github.com/sahilyho/Eggs_To_The_Basket"
+							class="btn btn-primary bg-dark"
+							><i class="fa-brands fa-github"></i> Source Code</a
 						>
 					</div>
 				</div>
@@ -124,6 +179,9 @@
 								</a>
 								<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<li>
+										<a class="dropdown-item" href="#project_0">Chatbot</a>
+									</li>
+									<li>
 										<a class="dropdown-item" href="#project_1"
 											>Braille Translator</a
 										>
@@ -138,10 +196,18 @@
 				</div>
 			</nav>
 		</main>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+			integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
 			crossorigin="anonymous"
 		></script>
+		<script src="chatbot.js"></script>
 	</body>
 </html>
