--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
 						<a
 							href="https://github.com/sahilyho/chatbot"
 							class="btn btn-primary bg-dark"
-							><i class="fa-brands fa-javascript"></i> Source Code</a
+							><i class="fa-brands fa-github"></i> Source Code</a
 						>
 					</div>
 				</div>
